--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -30,13 +30,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="341" height="59.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="AfF-9E-Udb">
-                                                    <rect key="frame" x="8" y="0.0" width="325" height="59.5"/>
+                                                    <rect key="frame" x="8" y="0.0" width="333" height="59.5"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="guF-uk-WZv">
-                                                            <rect key="frame" x="0.0" y="0.0" width="53" height="59.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="53.5" height="59.5"/>
+                                                            <color key="backgroundColor" red="0.9510807966" green="0.9510807966" blue="0.9510807966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="59.5" id="36d-hb-JmH"/>
+                                                                <constraint firstAttribute="width" constant="53.5" id="uCc-Js-pyp"/>
+                                                            </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTU-6T-U7e">
-                                                            <rect key="frame" x="61" y="19.5" width="264" height="20.5"/>
+                                                            <rect key="frame" x="61.5" y="19.5" width="271.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -46,10 +51,10 @@
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="AfF-9E-Udb" secondAttribute="trailing" constant="8" id="0xl-R8-0gf"/>
-                                                <constraint firstItem="AfF-9E-Udb" firstAttribute="centerX" secondItem="zLN-1a-Ic1" secondAttribute="centerX" id="Aka-CJ-IvE"/>
-                                                <constraint firstItem="AfF-9E-Udb" firstAttribute="leading" secondItem="zLN-1a-Ic1" secondAttribute="leading" constant="8" id="OW5-85-azD"/>
-                                                <constraint firstItem="AfF-9E-Udb" firstAttribute="centerY" secondItem="zLN-1a-Ic1" secondAttribute="centerY" id="bG5-Sw-WAr"/>
+                                                <constraint firstItem="AfF-9E-Udb" firstAttribute="leading" secondItem="zLN-1a-Ic1" secondAttribute="leading" constant="8" id="BQW-Q8-1SN"/>
+                                                <constraint firstAttribute="trailing" secondItem="AfF-9E-Udb" secondAttribute="trailing" id="j5c-yc-2eW"/>
+                                                <constraint firstItem="AfF-9E-Udb" firstAttribute="top" secondItem="zLN-1a-Ic1" secondAttribute="top" id="n6x-YQ-gAb"/>
+                                                <constraint firstAttribute="bottom" secondItem="AfF-9E-Udb" secondAttribute="bottom" id="yE5-5d-oSu"/>
                                             </constraints>
                                         </view>
                                     </subviews>
