--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
                     <connections>
                         <outlet property="emailLabel" destination="JbF-bE-50N" id="9fx-GP-jWs"/>
                         <outlet property="nameLabel" destination="IAD-a7-SSE" id="h5x-Rc-KEl"/>
-                        <outlet property="userImageView" destination="A5Q-II-YhS" id="mVf-UB-sko"/>
+                        <outlet property="userImageView" destination="HQc-Mf-SGT" id="Ftg-i7-mYI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ccz-Sf-TDx" userLabel="First Responder" sceneMemberID="firstResponder"/>
